fixed some layout issues (more responsive positioning)

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,74 +1,74 @@
-html {
-  body {
-    background-image: url("../images/pattern-bg.png");
-    position: absolute;
-    background-size: 480%;
-    background-repeat: no-repeat;
-    background-position: top;
-    top: 0;
-    left: 0;
-    padding: 3.2rem 2.4rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    h1 {
-      font-size: 2.6rem;
-      line-height: 3rem;
-      letter-spacing: -0.023rem;
-      color: white;
-      text-align: center;
-      margin-bottom: 3.5rem;
-    }
-    main {
+body {
+  background-image: url("../images/pattern-bg.png");
+  position: relative;
+  background-size: 300%;
+  background-repeat: no-repeat;
+  background-position: top;
+  top: 0;
+  left: 0;
+  padding: 3.2rem 2.4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  h1 {
+    font-size: 2.6rem;
+    line-height: 3rem;
+    letter-spacing: -0.023rem;
+    color: white;
+    text-align: center;
+    margin-bottom: 3.5rem;
+  }
+  main {
+    margin: 0 auto;
+    .search-container {
+      border-radius: 15px;
+      background-color: white;
+      height: 5.8rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      max-width: 32.7rem;
       margin: 0 auto;
-      .search-container {
-        border-radius: 15px;
-        background-color: white;
-        height: 5.8rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        max-width: 32.7rem;
-        margin-bottom: 2.4rem;
-        #ip-address-input {
-          border: none;
-          width: 26.9rem;
-          font-size: 1.8rem;
-          font-weight: 400;
-          padding: 0 2.4rem;
-        }
-        .submit-btn {
-          background-color: black;
-          width: 5.8rem;
-          height: 5.8rem;
-          border-top-right-radius: 15px;
-          border-bottom-right-radius: 15px;
-        }
+      margin-bottom: 2.4rem;
+      #ip-address-input {
+        border: none;
+        width: 26.9rem;
+        font-size: 1.8rem;
+        font-weight: 400;
+        padding: 0 2.4rem;
       }
-      .main-container {
-        background-color: white;
-        border-radius: 15px;
-        text-align: center;
-        padding: 2.6rem 2.4rem;
-        display: flex;
-        flex-direction: column;
-        gap: 2.4rem;
-        .data-point {
-          h3 {
-            font-size: 1rem;
-            font-weight: 700;
-            letter-spacing: 0.146rem;
-            color: $dark-gray;
-            text-transform: uppercase;
-            margin-bottom: 0.25rem;
-          }
-          h2 {
-            font-size: 2.4rem;
-            font-weight: 500;
-            letter-spacing: -0.018rem;
-            color: $very-dark-gray;
-          }
+      .submit-btn {
+        background-color: black;
+        width: 5.8rem;
+        height: 5.8rem;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+      }
+    }
+    .main-container {
+      background-color: white;
+      border-radius: 15px;
+      text-align: center;
+      padding: 2.6rem 2.4rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2.4rem;
+      margin: 0 auto;
+      .data-point {
+        h3 {
+          font-size: 1rem;
+          font-weight: 700;
+          letter-spacing: 0.146rem;
+          color: $dark-gray;
+          text-transform: uppercase;
+          margin-bottom: 0.25rem;
+        }
+        h2 {
+          font-size: 2.4rem;
+          font-weight: 500;
+          letter-spacing: -0.018rem;
+          color: $very-dark-gray;
         }
       }
     }
