--- a/scss/styles.css
+++ b/scss/styles.css
@@ -115,10 +115,10 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-html body {
+body {
   background-image: url("../images/pattern-bg.png");
-  position: absolute;
-  background-size: 480%;
+  position: relative;
+  background-size: 300%;
   background-repeat: no-repeat;
   background-position: top;
   top: 0;
@@ -139,7 +139,7 @@ html body {
           align-items: center;
 }
 
-html body h1 {
+body h1 {
   font-size: 2.6rem;
   line-height: 3rem;
   letter-spacing: -0.023rem;
@@ -148,11 +148,11 @@ html body h1 {
   margin-bottom: 3.5rem;
 }
 
-html body main {
+body main {
   margin: 0 auto;
 }
 
-html body main .search-container {
+body main .search-container {
   border-radius: 15px;
   background-color: white;
   height: 5.8rem;
@@ -166,10 +166,11 @@ html body main .search-container {
       -ms-flex-align: center;
           align-items: center;
   max-width: 32.7rem;
+  margin: 0 auto;
   margin-bottom: 2.4rem;
 }
 
-html body main .search-container #ip-address-input {
+body main .search-container #ip-address-input {
   border: none;
   width: 26.9rem;
   font-size: 1.8rem;
@@ -177,7 +178,7 @@ html body main .search-container #ip-address-input {
   padding: 0 2.4rem;
 }
 
-html body main .search-container .submit-btn {
+body main .search-container .submit-btn {
   background-color: black;
   width: 5.8rem;
   height: 5.8rem;
@@ -185,7 +186,7 @@ html body main .search-container .submit-btn {
   border-bottom-right-radius: 15px;
 }
 
-html body main .main-container {
+body main .main-container {
   background-color: white;
   border-radius: 15px;
   text-align: center;
@@ -198,9 +199,10 @@ html body main .main-container {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 2.4rem;
+  margin: 0 auto;
 }
 
-html body main .main-container .data-point h3 {
+body main .main-container .data-point h3 {
   font-size: 1rem;
   font-weight: 700;
   letter-spacing: 0.146rem;
@@ -209,7 +211,7 @@ html body main .main-container .data-point h3 {
   margin-bottom: 0.25rem;
 }
 
-html body main .main-container .data-point h2 {
+body main .main-container .data-point h2 {
   font-size: 2.4rem;
   font-weight: 500;
   letter-spacing: -0.018rem;
